--- a/palindrome.html
+++ b/palindrome.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Palindrome Birthday</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Is your BirthDay is Palindrome?</h1>
-    <input type="date" id="bday-input"/>
-    <button id ="show">Show</button>
-    <div id = "result"></div>
-</body>
+    <input type="date" id="bday-input" />
+    <button id="show">Show</button>
+    <div id="result"></div>
+    <script src="birthDayPalindrom.js"></script>
+  </body>
 </html>
