--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./style.css" />
+
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
     <title>Palindrome Birthday</title>
   </head>
+
   <body>
-    <h1>Is your BirthDay is Palindrome?</h1>
-    <input type="date" id="bday-input" />
-    <button id="show">Show</button>
-    <div id="result"></div>
-    <script src="birthDayPalindrom.js"></script>
+    <nav class="nav">Palindrome Birthday</nav>
+
+    <header>
+      <h2>Check out if your birthday is palindrome or not!</h2>
+    </header>
+
+    <main>
+      <p class="details">
+        Enter your birthdate and we will tell you if it is palindrome or not. If
+        not, we will return the nearest palindrome date and the number of days
+        by which you missed it.
+      </p>
+
+      <form id="form">
+        <input type="date" id="inputDate" required />
+
+        <button type="submit">Check</button>
+      </form>
+
+      <div id="result"></div>
+    </main>
+    <script src="/app.js"></script>
   </body>
 </html>
