--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 
       <div id="result"></div>
     </main>
+
+    <footer class="footer">
+      <a href="https://anusha-sp.netlify.app/" target="_blank"
+        >Made by Anusha</a
+      >
+    </footer>
+
     <script src="/app.js"></script>
   </body>
 </html>
